# FourierDraw

./: .gitignore  CMakeLists.txt  Delaunay.hpp  DouglasPeucker.hpp  FFT.hpp  README.md  kruskal.hpp  main.cpp  main.hpp
